force-app/main/default/objects/Recurring_Settings__mdt/Recurring_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Recurring Payment Settings</label>
    <pluralLabel>Recurring Payment Settings</pluralLabel>
</CustomObject>