force-app/main/default/objects/Recurring_Settings__mdt/fields/Currency_Id__c.field-meta.xml
<CustomField>
    <fullName>Currency_Id__c</fullName>
    <label>Currency Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>