force-app/main/default/objects/Recurring_Settings__mdt/fields/Invoice_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item_Quantity__c</fullName>
    <label>Invoice Item Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>