force-app/main/default/objects/Recurring_Settings__mdt/fields/Notify_Url__c.field-meta.xml
<CustomField>
    <fullName>Notify_Url__c</fullName>
    <label>Notify Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>