force-app/main/default/objects/Recurring_Settings__mdt/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>