force-app/main/default/objects/Recurring_Settings__mdt/fields/Seed__c.field-meta.xml
<CustomField>
    <fullName>Seed__c</fullName>
    <label>Seed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>