force-app/main/default/objects/Recurring_Settings__mdt/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>