force-app/main/default/objects/Recurring_Settings__mdt/fields/Wsb_Version__c.field-meta.xml
<CustomField>
    <fullName>Wsb_Version__c</fullName>
    <label>Wsb Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>